Closed
Bug 114366
Opened 24 years ago
Closed 23 years ago
UMR in nsHTMLInputElement.cpp testing event flags
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: jrgmorrison, Assigned: joki)
References
()
Details
Attachments
(3 files)
36.05 KB,
text/plain
|
Details | |
4.48 KB,
patch
|
Details | Diff | Splinter Review | |
4.09 KB,
patch
|
saari
:
review+
jst
:
superreview+
roc
:
approval+
|
Details | Diff | Splinter Review |
running purify, I get a lot of UMR warnings from this bit of code,
called from a variety of different locations (full purify logs
to be attached). This happens when typing in the urlbar, or focus/blurring
the window and the input element.
aEvent->flags is 0xdeadbeef running under VC6, and I don't really see
where that member is initialized prior to its use, but maybe I'm just
missing something here.
1151
1152 // If NS_EVENT_FLAG_NO_CONTENT_DISPATCH is set we will not allow content
to handle
1153 // this event. But to allow middle mouse button paste to work we must
allow
1154 // middle clicks to go to text fields anyway.
1155 PRBool noContentDispatch = aEvent->flags &
NS_EVENT_FLAG_NO_CONTENT_DISPATCH;
1156 if ((type == NS_FORM_INPUT_TEXT || type == NS_FORM_INPUT_PASSWORD) &&
1157 aEvent->message == NS_MOUSE_MIDDLE_CLICK) {
1158 aEvent->flags &= ~NS_EVENT_FLAG_NO_CONTENT_DISPATCH;
1159 }
1160
Reporter | ||
Comment 1•24 years ago
|
||
jst might be able/willing to fix this bug - he was gracious enough to fix bug
109487 for me.
Keywords: nsbeta1
Comment 3•23 years ago
|
||
Good grief. Can't we fix this for 0.9.9? Who knows what strange bugs it might
be causing?
/be
Keywords: mozilla0.9.9
Comment 4•23 years ago
|
||
Fixing this will only fix one of many identical problems, see my comment in
http://bugzilla.mozilla.org/show_bug.cgi?id=109487#c1
Updated•23 years ago
|
Comment 6•23 years ago
|
||
This patch takes care of most of the situations listed in the purify logs. I'm
not certain that stack traces 1,2, and 9 are covered by this patch. My purify
builds consistently crash, preventing me from verifying that. jrgm, if you can
provide me a longer stack trace, I can cover those too. I identified a few
more places where this could be fixed. But I don't want to introduce
unnecessary changes to the tree at this time. Mozilla seems to work fine with
this patch.
Comment 7•23 years ago
|
||
Joki is actually fixing all these by adding a constructor to nsEvent, that'll
take care of every instance of code that has this same problem. Joki, do we
still want this change? I'd say we take your cover-all change in stead and leave
this one out.
Assignee | ||
Comment 8•23 years ago
|
||
Assignee | ||
Comment 9•23 years ago
|
||
Yeah, the patch is attached. As jst said, this'll cover the individual cases so
we can just go with the constructor patch if we want.
Comment 10•23 years ago
|
||
I think joki should own this, since he has a better patch to take care of this.
Assignee: radha → joki
Comment 11•23 years ago
|
||
Comment on attachment 76261 [details] [diff] [review]
patch with constructor for nsEvent
sr=jst
Attachment #76261 -
Flags: superreview+
Comment 12•23 years ago
|
||
Comment on attachment 76261 [details] [diff] [review]
patch with constructor for nsEvent
r=saari, straight forward enough
Attachment #76261 -
Flags: review+
Comment on attachment 76261 [details] [diff] [review]
patch with constructor for nsEvent
a=roc+moz
Attachment #76261 -
Flags: approval+
Assignee | ||
Comment 14•23 years ago
|
||
Fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•23 years ago
|
QA Contact: madhur → rakeshmishra
Reporter | ||
Comment 15•23 years ago
|
||
verify fixed in a purify run (for pure pedantry).
Status: RESOLVED → VERIFIED
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•