Fix for bug 114366, fix UMR in nsEvent struct by adding constructor.  r:saari, sr:jst, a:roc+moz